add: compile ke jar